Changed the colors and fixed the overlapping text.

--- a/final-project/static/d3.parsets.css
+++ b/final-project/static/d3.parsets.css
@@ -16,10 +16,10 @@
 .ribbon-mouse path { fill-opacity: 0; }
 
 .category-0 { fill: #1f77b4; stroke: #1f77b4; }
-.category-1 { fill: #ff7f0e; stroke: #ff7f0e; }
+.category-1 { fill: #FFAF33; stroke: #FFAF33; }
 .category-2 { fill: #2ca02c; stroke: #2ca02c; }
-.category-3 { fill: #d62728; stroke: #d62728; }
-.category-4 { fill: #9467bd; stroke: #9467bd; }
+.category-3 { fill: #9467bd; stroke: #9467bd; }
+.category-4 { fill: #d62728; stroke: #d62728; }
 .category-5 { fill: #8c564b; stroke: #8c564b; }
 .category-6 { fill: #e377c2; stroke: #e377c2; }
 .category-7 { fill: #7f7f7f; stroke: #7f7f7f; }
